--- a/index.html
+++ b/index.html
@@ -4,26 +4,158 @@
 
 <head>
   <meta charset="UTF-8">
+
   <title>CryptoZombies front-end</title>
-<link rel="icon" href="favicon.ico">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <!-- <link rel="stylesheet" href="../_vendor/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../_vendor/prismjs/themes/prism-okaidia.css">
+  <link rel="stylesheet" href="../_assets/css/custom.min.css"> -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-23019901-1');
+  </script>
+
+  <link rel="icon" href="favicon.ico">
   <script language="javascript" type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.7-rc.0/web3.min.js"></script>
+  <script language="javascript" type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.2.7-rc.0/web3.min.js"></script>
   <script language="javascript" type="text/javascript" src="cryptozombies_abi.js"></script>
+
 </head>
 
 <body>
-  <div id="txStatus"></div>
-  <div id="zombies"></div>
+  <div class="fixed-top navbar-dark bg-dark">
+  </div>
 
-  <button class="showZombieButton">Show Zombies</button>
-  <button class="createzombieButton">Create Zombie</button>
-  <button class="levelupButton">Level Up</button>
-  <button class="feedOnKittyButton">Feed On Kitty</button>
-  <button class="ownerofButton">Owner Of Zombie</button>
-  <input type="text", id="ownerofTxt">
+  <!-- DApp Title Begin -->
 
-  <script language="javascript" type="text/javascript" src="js/cryptozombies-logic.js"></script>
+  <div class="container">
+    <div class="page-header" id="banner">
+      <div class="row">
+        <div class="text-center">
+          <h1>Crypto Zombies DApp</h1>
+          <p class="lead">Crypto Zombies DApp is a front-end application that interacts with smart-contracts in the
+            back-end</p>
+        </div>
+        <div class="text-center">
+
+
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="bs-component justify-content-center">
+                <p class="text-center" id="txStatus"></p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="sponsor">
+            <!-- <script async src="https://cdn.carbonads.com/carbon.js?serve=CKYIE23N&placement=bootswatchcom"
+              id="_carbonads_js"></script> -->
+            <img src="preview-zombie.png" alt="Zombie">
+          </div>
+
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="bs-component justify-content-center">
+                <p class="text-center" id="zombies"></p>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+
+    <!-- DApp title end -->
+
+    <!-- create zombie Begin -->
+
+    <div class="bs-docs-section clearfix">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <div class="page-header">
+            <h2 id="navbars">Test Zombie Factory Smart Contract</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-7">
+        <p class="bs-component">
+        <div class="d-grid gap-2">
+          <button class="btn btn-lg btn-primary" type="button" id="createzombieButton">Create Zombie</button>
+        </div>
+        </p>
+      </div>
+    </div>
+
+    <!-- create zombie End -->
+
+  </br>
+
+    <!-- Test Zombie Helper Begin -->
+
+    <div class="bs-docs-section clearfix">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <div class="page-header">
+            <h2 id="navbars">Test Zombie Helper Smart Contract</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <button class="btn btn-lg btn-primary" type="button" id="showZombieButton">Show Zombies</button>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <button class="btn btn-lg btn-primary" type="button" id="levelupButton">Level Up Zombie</button>
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <input type="text" id="ownerofTxt" class="form-control" placeholder="Zombie Id" aria-label="Zombie's Id"
+            aria-describedby="button-addon2">
+          <button class="btn btn-primary" type="button" id="ownerofButton">View Zombie's Owner</button>
+        </div>
+      </div>
+
+    </div>
+
+
+    <!-- Test Zombie Helper End -->
+
+
+    <!-- provided code start -->
+
+    <!-- <div id="txStatus"></div> -->
+    <!-- <div id="zombies"></div> -->
+
+    <!-- <button class="showZombieButton">Show Zombies</button> -->
+    <!-- <button class="createzombieButton">Create Zombie</button> -->
+    <!-- <button class="levelupButton">Level Up</button> -->
+    <button class="feedOnKittyButton">Feed On Kitty</button>
+    <!-- <button class="ownerofButton">Owner Of Zombie</button> -->
+    <!-- <input type="text" id="ownerofTxt"> -->
+
+    <!-- provided code end -->
+
 </body>
+<script language="javascript" type="text/javascript" src="js/cryptozombies-logic.js"></script>
 
 </html>
