added support to change zombie name and dna

--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
           <div class="row justify-content-center">
             <div class="col-lg-8">
               <div class="bs-component justify-content-center">
-                <p class="text-center" id="txStatus"></p>
+                <p class="text-center text-success" id="txStatus"></p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <div class="bs-component justify-content-center">
+                <p class="text-center text-danger" id="txStatusError"></p>
               </div>
             </div>
           </div>
@@ -100,7 +109,7 @@
 
     <!-- create zombie End -->
 
-  </br>
+    </br>
 
     <!-- Test Zombie Helper Begin -->
 
@@ -129,11 +138,47 @@
       </div>
       <div class="col-lg-4">
         <div class="bs-component">
-          <input type="text" id="ownerofTxt" class="form-control" placeholder="Zombie Id" aria-label="Zombie's Id"
-            aria-describedby="button-addon2">
-          <button class="btn btn-primary" type="button" id="ownerofButton">View Zombie's Owner</button>
+          <div class="input-group mb-3">
+            <input type="text" id="ownerofTxt" class="form-control" placeholder="Zombie Id" aria-label="Zombie's Id"
+              aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="ownerofButton">View Zombie's Owner</button>
+          </div>
         </div>
       </div>
+
+    </div>
+
+    <div class="row">
+
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="input-group mb-3">
+            <input type="text" id="changeZombieNameTxt" class="form-control" placeholder="New Zombie Name" aria-label="Zombie's name"
+              aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="changeZombieNameButton">Set Zombie's New Name</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="input-group mb-3">
+            <input type="text" id="changeZombieDNATxt" class="form-control" placeholder="Zombie DNA" aria-label="Zombie's DNA"
+              aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="changeZombieDNAButton">Set Zombie's New DNA</button>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="input-group mb-3">
+            <input type="text" id="ownerofTxt" class="form-control" placeholder="Zombie Id" aria-label="Zombie's Id"
+              aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="ownerofButton">View Zombie's Owner</button>
+          </div>
+        </div>
+      </div> -->
 
     </div>
 
