--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="bs-component">
           <input type="text" id="kittyID" class="form-control" placeholder="Kitty ID" aria-label="Kitty ID"
             aria-describedby="button-addon2">
-          <button class="btn btn-primary" type="button" id="feedButton">Feed On Kitty</button>
+          <button class="btn btn-primary" type="button" id="feedOnKittyButton">Feed On Kitty</button>
         </div>
       </div>
 
