--- a/index.html
+++ b/index.html
@@ -169,6 +169,23 @@
           </div>
         </div>
       </div>
+      <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="input-group mb-3">
+            <button class="btn btn-primary" type="button" id="withdrawButton">Withdraw</button>
+          </div>
+        </div>
+      </div>
+	  
+	    <div class="col-lg-4">
+        <div class="bs-component">
+          <div class="input-group mb-3">
+			      <input type="text" id="changeLevelUpFee" class="form-control" placeholder="Level-Up Fee" aria-label="Zombie's Levelling Fee"
+              aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="changeFeeButton">Set Level-Up Fee</button>
+          </div>
+        </div>
+      </div>
 
       <!-- <div class="col-lg-4">
         <div class="bs-component">
