--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
         </div>
       </div> -->
 
-      <div class="bs-component">
+      <!-- <div class="bs-component">
         <input type="text" id="changeName" class="form-control" placeholder="Assign a new name and press 'Save'" aria-label="New Name"
           aria-describedby="button-addon2">
         <button class="btn btn-primary" type="button" id="saveButton">Save Name</button>
-      </div>
+      </div> -->
 
       <!-- UI POP UP -->
       <!-- <div class="col-lg-4">
